--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^5.0.0-alpha.8",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
