--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^5.0.0-alpha.8",
+    "googleapis": "^84.0.0",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
     "node-fetch": "^2.6.1",
