--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "PORT=8080 nodemon ./server.js",
-    "start": "PORT=8080 NODE_ENV=production node ./server.js"
+    "dev": "nodemon ./server.js",
+    "start": "NODE_ENV=production node ./server.js"
   },
   "repository": {
     "type": "git",
