--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "get:token": "node ./utils/gmail-auth-token.js",
+    "get:token": "node ./src/utils/gmail-auth-token.js",
     "create:env": "node ./create-env.js",
     "dev": "nodemon ./server.js",
     "start": "NODE_ENV=production node ./server.js"
